# python-template

./: .gitignore  README.md  example.html  index.html  main.py  requirements.txt  search.js  setup.cfg  setup.py
.github/workflows/: docs.yml  lint.yml  pytest.yml
example/: cam_config.html  celcius.html  celcius.py  foo.html  xterrabot.html
scripts/vscode/: settings.json
src/: main.py
src/config_files/: __init__.py
src/example/: __init__.py  cam_config.py  celcius.py  foo.py  xterrabot.py
