[metadata]
name = example
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/python-template
description = Python template project
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    numpy

[options.packages.find]
where=src

[options.extras_require]
dev = black
      flake8
      pytest
      coverage

[options.entry_points]
console_scripts = 
    example_entry_point = example.celcius:main

[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True

